css/master.css
body
{
    font-family: sans-serif;

    background: #ddd url(../got.jpg) no-repeat center center fixed;
    background-size: cover;
}

h2
{
    text-align: center;
}

.card
{
    display: inline-block;

    box-sizing: border-box;
    width: calc(82%/3);
    margin: 20px 3%;
    padding: 20px;

    vertical-align: top;

    border-radius: 5px;
    background-color: rgba(255,255,255,.5);
    box-shadow: 0 0 7px rgba(0,0,0,.3);
}

.card > h3
{
    margin-top: 0;

    text-align: center;
}

.card > h4 > span
{
    font-size: 1em;
    font-weight: normal;
}

.card > ul
{
    margin-top: 0;
    margin-left: 0;
    padding-left: 1em;

    list-style: none;
}

.card > ul > li:before
{
    display: inline-block;

    width: 1em;
    margin-left: -1em;

    content: '-';
}

.link
{
    cursor: pointer;
}

.list-label
{
    margin-bottom: 0;
}

.search-container
{
    float: right;
}

/* Tooltip container */
.tooltip
{
    position: relative;

    display: inline-block;

    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
}

/* Tooltip text */
.tooltip .tooltiptext
{
    font-size: .8em;
    /* Position the tooltip text - see examples below! */

    position: absolute;
    z-index: 1;
    right: 1px;

    visibility: hidden;

    width: 240px;
    padding: 5px 0;

    color: #fff;
    border-radius: 6px;
    background-color: black;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext
{
    visibility: visible;
}

